fix input form and add details to skills/new

--- a/views/skills/show.ejs
+++ b/views/skills/show.ejs
@@ -7,10 +7,10 @@
   <title>Document</title>
 </head>
 <body>
-  <h1> Dev Skills </h1>
+  <h1> Dev Skills Details </h1>
   <h2>Skill #<%= skill._id %></h2>
-  <h3><%= skill.skill %></h3>
-  <p>Complete: <%= skill.done ? 'Yes' : 'No' %></p>
+  <h3>This skill is titled <%= skill.skill %></h3>
+  <p>Training complete? : <%= skill.done ? 'Yes' : 'No' %></p>
   <a href="/skills">Go Back</a>
 </body>
 </html>
