--- a/views/skills/new.ejs
+++ b/views/skills/new.ejs
@@ -10,7 +10,7 @@
   <body>
     <h1>New Dev Skill</h1>
     <form action="/skills" method="POST" autocomplete="off">
-      <input type="skill" name="skill">
+      <input type="input" name="skill">
       <button type="submit">Save Skill</button>
     </form>
   </body>
