--- a/views/skills/show.ejs
+++ b/views/skills/show.ejs
@@ -9,7 +9,7 @@
 <body>
   <h1> Dev Skills Details </h1>
   <h2>Skill #<%= skill._id %></h2>
-  <h3>This skill is titled <%= skill.skill %></h3>
+  <h3>This skill is <%= skill.skill %></h3>
   <p>Training complete? : <%= skill.done ? 'Yes' : 'No' %></p>
   <a href="/skills">Go Back</a>
 </body>
